# ResumeAgent

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/adapters/: filesystem_storage.py  markdown_pdf_renderer.py
backend/app/adapters/pdf/: markdown_html_converter.py  resume.css
backend/app/api/routes/: export.py  inputs.py  preview.py  tailor.py
backend/app/api/schemas/: common.py
backend/app/core/: config.py  dependencies.py  errors.py  paths.py
backend/app/domain/: errors.py
backend/app/domain/generation/: certifications.py  experience_formatter.py  models.py  policies.py  resume_sections.py
backend/app/domain/matching/: models.py  policies.py
backend/app/ports/: pdf_renderer_port.py  storage_port.py
backend/app/services/: ats_scoring_service.py  export_service.py  input_service.py  openai_service.py  preview_service.py  prompt_repository.py  tailor_service.py
backend/tests/integration/: test_export_route.py  test_health.py
backend/tests/unit/: test_ats_scoring_service.py  test_certifications.py  test_experience_formatter.py  test_export_service.py  test_generation_policies.py  test_markdown_html_converter.py  test_matching_policies.py  test_openai_service.py  test_pipeline_coordinator.py  test_pipeline_stages.py  test_preview_service.py  test_prompt_repository.py  test_resume_generation_service.py  test_resume_generator.py  test_resume_matching_engine.py  test_section_matching_service.py  test_tailor_service.py
scripts/: stop.sh  (+1 more)
(+34 files in other folders)
